--- a/MvcProjectCamp/Web.config
+++ b/MvcProjectCamp/Web.config
@@ -14,6 +14,12 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
+
+	<connectionStrings>
+		<add name="Context" connectionString="data source=DESKTOP-1D98OO0\MSSQLSERVER01;
+			 initial catalog = DbMvcCamp;integrated security=true;" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
+	
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
